tests/transpiler/x/cobol/list_assign.cob
>>SOURCE FORMAT FREE
IDENTIFICATION DIVISION.
PROGRAM-ID. MAIN.

DATA DIVISION.
WORKING-STORAGE SECTION.
01 NUMS PIC X(6) VALUE "[1, 2]".
01 TMP PIC S9(9) VALUE 0.

PROCEDURE DIVISION.
    COMPUTE NUMS = 3
    COMPUTE TMP = NUMS(1 + 1:1 + 1 - 1)
    DISPLAY TMP
    STOP RUN.
